# church-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  glama.json  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
src/church_mcp/: __init__.py  server.py
